--- a/tex/modules/5-M/sections/1.tex
+++ b/tex/modules/5-M/sections/1.tex
@@ -1,35 +1,5 @@
 \begin{applicationActivities}
 
-\begin{observation}
-Recall that
-  to quickly compute \(T(\vec v)\) from its standard matrix \(A\),
-  compute the \textbf{dot product} (defined in Calculus 3) of each matrix row
-  with the vector. For example, if \(T\) has the standard matrix
-  \[
-    A = \begin{bmatrix} 1 & 2 & 3 \\ 0 & 1 & -2 \\ 2 & -1 & 0 \end{bmatrix}
-  \]
-  then for \(\vec v=\begin{bmatrix}3\\0\\-2\end{bmatrix}\) we may write
-  \[
-    T(\vec v)
-      =
-    A\vec v
-      =
-    \begin{bmatrix} 1 & 2 & 3 \\ 0 & 1 & -2 \\ 2 & -1 & 0 \end{bmatrix}
-    \begin{bmatrix}3\\0\\-2\end{bmatrix}
-      =
-    \begin{bmatrix}
-      1(3)+2(0)+3(-2)\\
-      0(3)+1(0)-2(-2)\\
-      2(3)-1(0)+0(-2)
-    \end{bmatrix}
-      =
-    \begin{bmatrix}
-      -3\\
-      4\\
-      6
-    \end{bmatrix}
-  .\]
-\end{observation}
 
 \begin{activity}{5}
 Let $T: \IR^3 \rightarrow \IR^2$ be given by the \(2\times 3\) standard matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the \(4\times 2\) standard matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
@@ -83,13 +53,10 @@ Compute
   S(T(\vec{e}_1))
     =
   S\left(\begin{bmatrix} 2 \\ 5\end{bmatrix}\right)
-    =
-  \begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}
-  \begin{bmatrix} 2 \\ 5\end{bmatrix}
-    =
-  \begin{bmatrix}\unknown\\\unknown\\\unknown\\\unknown\end{bmatrix}
+        =
+  \begin{bmatrix}\unknown\\\unknown\\\unknown\\\unknown\end{bmatrix}.
 \]
-using the dot product of each matrix row with the vector.
+
 \end{subactivity}
 \begin{subactivity}
 Compute
@@ -128,14 +95,7 @@ For the previous activity, \(S\) had a \(4\times \circledNumber{2}\) matrix and
 \[
     =
   \left[
-  \begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}
-  \begin{bmatrix} 2 \\ 5\end{bmatrix}
-    \hspace{1em}
-  \begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}
-  \begin{bmatrix} 1 \\ -3\end{bmatrix}
-    \hspace{1em}
-  \begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}
-  \begin{bmatrix} -3 \\ 4\end{bmatrix}
+  (S \circ T)(\vec{e}_1) (S\circ T)(\vec{e}_2) (S \circ T)(\vec{e}_3)
   \right]
     =
   \begin{bmatrix}
@@ -147,38 +107,21 @@ For the previous activity, \(S\) had a \(4\times \circledNumber{2}\) matrix and
 \].
 \end{definition}
 
-\begin{observation}
-  Each cell of a matrix product is found by taking the dot product
-  of a first matrix row and a second matrix column. Since
-  \(3(-3)+5(4)=11\):
-  \[
-    AB
-      =
-    \begin{bmatrix} 1 & 2 \\ 0 & 1 \\ \circledNumber{3} & \circledNumber{5} \\ -1 & -2 \end{bmatrix}
-    \begin{bmatrix} 2 & 1 & \circledNumber{-3} \\ 5 & -3 & \circledNumber{4} \end{bmatrix}
-      =
-    \begin{bmatrix}
-      12 & -5 & 5 \\
-      5 & -3 & 4 \\
-      31 & -12 & \circledNumber{11} \\
-      -12 & 5 & -5
-    \end{bmatrix}
-  \]
-\end{observation}
-
 
 
 \begin{activity}{10}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
-Find the standard matrix \(BA\) of $T \circ S$.
+Find the standard matrix \(AB\) of $S \circ T$.
 \end{activity}
 
 \begin{activity}{5}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
-Find the standard matrix \(AB\) of $S \circ T$.
+Find the standard matrix \(BA\) of $T \circ S$.
 \end{activity}
+
+
 
 \begin{activity}{5}
 Matrix multiplication only makes sense if the first matrix has as many
@@ -194,6 +137,8 @@ the products \(AB,AC,BA,BC,CA,CB\) can actually be computed.
   C = \begin{bmatrix}2&2\\0&-1\\3&1\\4&0\end{bmatrix}
 \]
 \end{activity}
+
+
 
 \begin{observation}
 Note that an \(\IR^n\) vector acts exactly the same as an \(n\times 1\)
