--- a/tex/modules/5-M/sections/1.tex
+++ b/tex/modules/5-M/sections/1.tex
@@ -104,7 +104,7 @@ For the previous activity, \(S\) had a \(4\times \circledNumber{2}\) matrix and
     31 & -12 & 11 \\
     -12 & 5 & -5
   \end{bmatrix}
-\].
+.\]
 \end{definition}
 
 
@@ -121,24 +121,9 @@ Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3
 Find the standard matrix \(BA\) of $T \circ S$.
 \end{activity}
 
-
-
-\begin{activity}{5}
-Matrix multiplication only makes sense if the first matrix has as many
-columns as the second matrix has rows. Label each of these matrices
-with \textbf{rows \(\times\) columns}, and then figure out which of
-the products \(AB,AC,BA,BC,CA,CB\) can actually be computed.
-
-\[
-  A = \begin{bmatrix}1&0&-3\\3&2&1\end{bmatrix}
-    \hspace{2em}
-  B = \begin{bmatrix}2&2&1&0&1\\1&1&1&-1&0\\0&0&3&2&1\\-1&5&7&2&1\end{bmatrix}
-    \hspace{2em}
-  C = \begin{bmatrix}2&2\\0&-1\\3&1\\4&0\end{bmatrix}
-\]
+\begin{activity}{10}
+Let \(T: \IR^4 \rightarrow \IR^2\) be given by the matrix \(B=\begin{bmatrix} 3 & -1 \\ 2 & -3 \\ 5 & 1 \\ -4 & 2 \end{bmatrix} \) and let \(S: \IR^2 \rightarrow \IR^3\) be given by the matrix \(A = \begin{bmatrix} 3 & 1 & -1 \\ 2 & -4 & 2 \end{bmatrix}\).  Compute \(AB\), the standard matrix of the composition \(S \circ T\).
 \end{activity}
-
-
 
 \begin{observation}
 Note that an \(\IR^n\) vector acts exactly the same as an \(n\times 1\)
