--- a/tex/modules/6-G/exercises/G1.tex
+++ b/tex/modules/6-G/exercises/G1.tex
@@ -1,101 +1,179 @@
 \begin{problem}{G1}
-Compute the determinant of the matrix $\begin{bmatrix} 3 & -1 & 0 & 4 \\ 2 & 1 & 1& -1 \\ 0 & 1 & 1 & 3 \\ 1 & -2 & 0 & 0 \end{bmatrix}$.
-\end{problem}
-\begin{solution}
-$$\det \begin{bmatrix} 3 & -1 & 0 & 4 \\ 2 & 1 & 1 &-1 \\ 0 & 1 & 1 & 3 \\ 1 & -2 & 0 & 0 \end{bmatrix} = -\det \begin{bmatrix} -1 & 0 & 4 \\ 1 & 1 & -1 \\ 1 & 1 & 3 \end{bmatrix} +(-2) \det \begin{bmatrix} 3 & 0 & 4 \\ 2 & 1 & -1 \\ 0 & 1 & 3 \end{bmatrix} = -1(-4)+(-2)(20) = -36$$
-\end{solution}
-
-\begin{problem}{G1}
-Compute the determinant of the matrix $\begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 1 & 3 & 1 \\ 2 & 0 & 0 & -1 \\ 1 & -3 & -2 & -1 \end{bmatrix}$.
-\end{problem}
-\begin{solution}
-\begin{align*}
-\det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 1 & 3 & 1 \\ 2 & 0 & 0 & -1 \\ 1 & -3 & -2 & -1 \end{bmatrix} &= 2 \det \begin{bmatrix} 3 & 0 & -1 \\ 1 & 3 & 1 \\ -3 & -2 & -1 \end{bmatrix} -(-1) \det \begin{bmatrix} 1 & 3 & 0 \\ 0 & 1 & 3 \\ 1 & -3 & -2 \end{bmatrix} \\
-&=2\left( 3 \det \begin{bmatrix} 3 & 1 \\ -2 & -1 \end{bmatrix} + (-1) \det \begin{bmatrix} 1 & 3 \\ -3 & -2 \end{bmatrix}\right) + \left( 1 \det \begin{bmatrix} 1 & 3 \\ -3 & -2 \end{bmatrix} -3 \begin{bmatrix} 0 & 3 \\ 1 & -2 \end{bmatrix} \right) \\
-&=2 \left( 3(-1)+(-1)(7) \right) + \left( (1)(7)-3(-3) \right) \\
-&= 2(-10)+16 \\
-&=-4
-\end{align*}
-\end{solution}
-
-
-\begin{problem}{G1}
-Compute the determinant of the matrix $\begin{bmatrix} 2 & 3 & 0 & 1 \\ -1 & 3 & 1 & 4 \\ 0 & 2 & 0 & 3 \\ 1 & -1 & 3 & 5 \end{bmatrix}$.
-\end{problem}
-\begin{solution}
-$-60$.
-\end{solution}
-
-\begin{problem}{G1}
-Compute the determinant of the matrix $\begin{bmatrix} 3 & -1 & 0  & 7 \\ 2 & 1 & 1 & -1  \\ 0 & 1 & 1 & 3 \\ 0 & 0 & 0 & 1   \end{bmatrix}$.
-\end{problem}
-\begin{solution}
-$2$
-\end{solution}
-
-\begin{problem}{G1}
-Compute the determinant of the matrix $\begin{bmatrix} 8 & 5 & 3 & 0 \\ 3 & 2 & 1 & 1 \\ 5 & -3 & 1 & -2 \\ -1 & 2 & 0 & 1\end{bmatrix} $.
-\end{problem}
-\begin{solution}
-$-1$.
-\end{solution}
-
-\begin{problem}{G1}
-Compute the determinant of the matrix
+Consider the row operation \(R_1+5R_3\to R_1\) applied as follows to show
+\(A\sim B\):
 \[
-  \begin{bmatrix}
-    1 & 3 & 2 & 4 \\
-    5 & 0 & -4 & 0 \\
-    -2 & 3 & -1 & 1 \\
-    0 & 1 & 0 & 1
-  \end{bmatrix}
-.\]
+A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+  \sim
+\begin{bmatrix}1+5(7)&2+5(8)&3+5(9)\\4&5&6\\7&8&9\end{bmatrix}=B
+\]
+\begin{enumerate}[(a)]
+\item Find a matrix \(R\) such that \(B=RA\).
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 4\), how does applying this row operation to \(C\) change its determinant?
+\end{enumerate}
 \end{problem}
 \begin{solution}
-\(15\).
+\begin{enumerate}
+\item \(R= \begin{bmatrix} 1 & 0 & 5 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\).
+\item \(\det(RC)= \det(R)\det(C)=(1)(4)=4\).
+\end{enumerate}
 \end{solution}
 
 \begin{problem}{G1}
-Compute the determinant of the matrix
+Consider the row operation \(R_2-4R_3\to R_2\) applied as follows to show
+\(A\sim B\):
 \[
-  \begin{bmatrix}
-    1 & 3 & 2 & 4 \\
-    -2 & 3 & -1 & 1 \\
-    5 & 0 & -4 & 0 \\
-    0 & 1 & 0 & 1
-  \end{bmatrix}
-.\]
+A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+  \sim
+\begin{bmatrix}1&2&3\\4-4(7)&5-4(8)&6-4(9)\\7&8&9\end{bmatrix}=B
+\]
+\begin{enumerate}[(a)]
+\item Find a matrix \(R\) such that \(B=RA\).
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 7\), how does applying this row operation to \(C\) change its determinant?
+\end{enumerate}
 \end{problem}
 \begin{solution}
-\(-15\).
+\begin{enumerate}
+\item \(R= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & -4 \\ 0 & 0 & 1 \end{bmatrix}\).
+\item \(\det(RC)= \det(R)\det(C)=(1)(7)=7\).
+\end{enumerate}
 \end{solution}
 
 \begin{problem}{G1}
-Compute the determinant of the matrix
+Consider the row operation \(R_3-2R_1\to R_3\) applied as follows to show
+\(A\sim B\):
 \[
-  \begin{bmatrix}
-    0 & -4 & 1 & 1 \\
-    0 & 1 & 0 & 1 \\
-    -2 & 3 & -1 & 1 \\
-    5 & 0 & -4 & 0 \\
-  \end{bmatrix}
-.\]
+A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+  \sim
+\begin{bmatrix}1&2&3\\4&5&6\\7-2(1)&8-2(1)&9-2(1)\end{bmatrix}=B
+\]
+\begin{enumerate}[(a)]
+\item Find a matrix \(R\) such that \(B=RA\).
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -8\), how does applying this row operation to \(C\) change its determinant?
+\end{enumerate}
 \end{problem}
 \begin{solution}
-\(55\).
+\begin{enumerate}
+\item \(R= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ -2 & 0 & 1 \end{bmatrix}\).
+\item \(\det(RC)= \det(R)\det(C)=(1)(-8)=-8\).
+\end{enumerate}
 \end{solution}
 
 \begin{problem}{G1}
-Compute the determinant of the matrix
+Consider the row operation \(4R_3\to R_3\) applied as follows to show
+\(A\sim B\):
 \[
-  \begin{bmatrix}
-    0 & -4 & 1 & 1 \\
-    -2 & 3 & -1 & 1 \\
-    0 & 1 & 0 & 1 \\
-    5 & 0 & -4 & 0 \\
-  \end{bmatrix}
-.\]
+A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+  \sim
+\begin{bmatrix}1&2&3\\4&5&6\\(4)7&(4)8&(4)9)\end{bmatrix}=B
+\]
+\begin{enumerate}[(a)]
+\item Find a matrix \(R\) such that \(B=RA\).
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -12\), how does applying this row operation to \(C\) change its determinant?
+\end{enumerate}
 \end{problem}
 \begin{solution}
-\(-55\).
+\begin{enumerate}
+\item \(R= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 4 \end{bmatrix}\).
+\item \(\det(RC)= \det(R)\det(C)=(4)(-12)=-48\).
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{G1}
+Consider the row operation \(-8R_1\to R_1\) applied as follows to show
+\(A\sim B\):
+\[
+A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+  \sim
+\begin{bmatrix}(-8)1&(-8)2&(-8)3\\4&5&6\\7&8&9)\end{bmatrix}=B
+\]
+\begin{enumerate}[(a)]
+\item Find a matrix \(R\) such that \(B=RA\).
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -2\), how does applying this row operation to \(C\) change its determinant?
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}
+\item \(R= \begin{bmatrix} -8 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\).
+\item \(\det(RC)= \det(R)\det(C)=(-8)(-2)=16\).
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{G1}
+Consider the row operation \(5R_2\to R_2\) applied as follows to show
+\(A\sim B\):
+\[
+A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+  \sim
+\begin{bmatrix}1&2&3\\(5)4&(5)5&(5)6\\7&8&9)\end{bmatrix}=B
+\]
+\begin{enumerate}[(a)]
+\item Find a matrix \(R\) such that \(B=RA\).
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 3\), how does applying this row operation to \(C\) change its determinant?
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}
+\item \(R= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 5 & 0 \\ 0 & 0 & 1 \end{bmatrix}\).
+\item \(\det(RC)= \det(R)\det(C)=(5)(3)=15\).
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{G1}
+Consider the row operation that swaps \(R_1\) and \(R_2\) applied as follows to show
+\(A\sim B\):
+\[
+A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+  \sim
+\begin{bmatrix}4&5&6\\1&2&3\\7&8&9\end{bmatrix}=B
+\]
+\begin{enumerate}[(a)]
+\item Find a matrix \(R\) such that \(B=RA\).
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 3\), how does applying this row operation to \(C\) change its determinant?
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}
+\item \(R= \begin{bmatrix} 0 & 1 & 0 \\ 1 & 0 & 0 \\ 0 & 0 & 1 \end{bmatrix}\).
+\item \(\det(RC)= \det(R)\det(C)=(-1)(3)=-3\).
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{G1}
+Consider the row operation that swaps \(R_3\) and \(R_2\) applied as follows to show
+\(A\sim B\):
+\[
+A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+  \sim
+\begin{bmatrix}1&2&3\\7&8&9\\4&5&6\end{bmatrix}=B
+\]
+\begin{enumerate}[(a)]
+\item Find a matrix \(R\) such that \(B=RA\).
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -7\), how does applying this row operation to \(C\) change its determinant?
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}
+\item \(R= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 0 & 1 \\ 0 & 1 & 0 \end{bmatrix}\).
+\item \(\det(RC)= \det(R)\det(C)=(-1)(-7)=7\).
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{G1}
+Consider the row operation that swaps \(R_3\) and \(R_1\) applied as follows to show
+\(A\sim B\):
+\[
+A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
+  \sim
+\begin{bmatrix}7&8&9\\4&5&6\\1&2&3\end{bmatrix}=B
+\]
+\begin{enumerate}[(a)]
+\item Find a matrix \(R\) such that \(B=RA\).
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -11\), how does applying this row operation to \(C\) change its determinant?
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}
+\item \(R= \begin{bmatrix} 0 & 0 & 1 \\ 0 & 1 & 0 \\ 1 & 0 & 0 \end{bmatrix}\).
+\item \(\det(RC)= \det(R)\det(C)=(-1)(-11)=11\).
+\end{enumerate}
 \end{solution}
