--- a/tex/modules/6-G/exercises/G2.tex
+++ b/tex/modules/6-G/exercises/G2.tex
@@ -1,86 +1,101 @@
 \begin{problem}{G2}
-Let $A= \begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3\end{bmatrix}$.
-List the eigenvalues of $A$ along with their algebraic multiplicities.
+Compute the determinant of the matrix $\begin{bmatrix} 3 & -1 & 0 & 4 \\ 2 & 1 & 1& -1 \\ 0 & 1 & 1 & 3 \\ 1 & -2 & 0 & 0 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
-
-\begin{align*}
-\det(A-\lambda I) &= \det \begin{bmatrix} -3-\lambda & 1 & 0 \\ -8 & 2-\lambda & -1 \\ 0 & 2 & 3-\lambda \end{bmatrix} \\
-&=(-3-\lambda) \det \begin{bmatrix} 2-\lambda & -1 \\ 2 & 3-\lambda \end{bmatrix} -(1) \det \begin{bmatrix} -8 & -1 \\ 0 & 3-\lambda \end{bmatrix} \\
-&=(-3-\lambda)\left( (2-\lambda)(3-\lambda)+2 \right)-\left(-8(3-\lambda) \right) \\
-&=(-3-\lambda)(8-5\lambda+\lambda ^2) +24-8\lambda \\
-&=-\lambda ^3 +2\lambda ^2+7\lambda -24 +24-8\lambda \\
-&= -\lambda ^3+2\lambda ^2 - \lambda \\
-&= -\lambda (\lambda ^2-2\lambda +1 ) \\
-&= -\lambda(\lambda-1)^2
-\end{align*}
-So $A$ has eigenvalues $0$ (with multiplicity 1) and $1$ (with algebraic multiplicity 2).
+$$\det \begin{bmatrix} 3 & -1 & 0 & 4 \\ 2 & 1 & 1 &-1 \\ 0 & 1 & 1 & 3 \\ 1 & -2 & 0 & 0 \end{bmatrix} = -\det \begin{bmatrix} -1 & 0 & 4 \\ 1 & 1 & -1 \\ 1 & 1 & 3 \end{bmatrix} +(-2) \det \begin{bmatrix} 3 & 0 & 4 \\ 2 & 1 & -1 \\ 0 & 1 & 3 \end{bmatrix} = -1(-4)+(-2)(20) = -36$$
 \end{solution}
 
-
 \begin{problem}{G2}
-Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 8 & -3 & -1 \\ 21 & -8 & -3 \\ -7 & 3 & 2\end{bmatrix}$.
+Compute the determinant of the matrix $\begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 1 & 3 & 1 \\ 2 & 0 & 0 & -1 \\ 1 & -3 & -2 & -1 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
 \begin{align*}
-\det(A-\lambda I) &= (8-\lambda) \det \begin{bmatrix} -8-\lambda & -3 \\ 3 & 2-\lambda \end{bmatrix}-(-3) \det \begin{bmatrix} 21 & -3 \\ -7 & 2-\lambda \end{bmatrix} +(-1) \det \begin{bmatrix} 21 & -8-\lambda \\ -7 & 3 \end{bmatrix} \\
-&=(8-\lambda)\left(\lambda ^2+6\lambda-7\right)+3\left(-21\lambda + 21 \right)-\left(-7\lambda +7 \right) \\
-&=(\lambda -1) \left( (8-\lambda)(\lambda+7)-63+7 \right) \\
-&= (\lambda-1)(\lambda -\lambda ^2) \\
-&= -\lambda (\lambda-1)^2
+\det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 1 & 3 & 1 \\ 2 & 0 & 0 & -1 \\ 1 & -3 & -2 & -1 \end{bmatrix} &= 2 \det \begin{bmatrix} 3 & 0 & -1 \\ 1 & 3 & 1 \\ -3 & -2 & -1 \end{bmatrix} -(-1) \det \begin{bmatrix} 1 & 3 & 0 \\ 0 & 1 & 3 \\ 1 & -3 & -2 \end{bmatrix} \\
+&=2\left( 3 \det \begin{bmatrix} 3 & 1 \\ -2 & -1 \end{bmatrix} + (-1) \det \begin{bmatrix} 1 & 3 \\ -3 & -2 \end{bmatrix}\right) + \left( 1 \det \begin{bmatrix} 1 & 3 \\ -3 & -2 \end{bmatrix} -3 \begin{bmatrix} 0 & 3 \\ 1 & -2 \end{bmatrix} \right) \\
+&=2 \left( 3(-1)+(-1)(7) \right) + \left( (1)(7)-3(-3) \right) \\
+&= 2(-10)+16 \\
+&=-4
 \end{align*}
-So the eigenvalues are $0$ (with algebraic multiplicity 1) and $1$ (with algebraic multiplicity 2).
 \end{solution}
 
 
 \begin{problem}{G2}
-Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 9 & -3 & 2 \\ 19 & -6 & 5 \\ -11 & 4 & -2\end{bmatrix}$.
+Compute the determinant of the matrix $\begin{bmatrix} 2 & 3 & 0 & 1 \\ -1 & 3 & 1 & 4 \\ 0 & 2 & 0 & 3 \\ 1 & -1 & 3 & 5 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
-1 (with algebraic multiplicity 2), and -1 (with algebraic multiplicity 1).
+$-60$.
 \end{solution}
 
 \begin{problem}{G2}
-Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 9 & -3 & 2 \\ 19 & -6 & 5 \\ -5 & 2 & 0 \end{bmatrix}$.
+Compute the determinant of the matrix $\begin{bmatrix} 3 & -1 & 0  & 7 \\ 2 & 1 & 1 & -1  \\ 0 & 1 & 1 & 3 \\ 0 & 0 & 0 & 1   \end{bmatrix}$.
 \end{problem}
 \begin{solution}
-1 (with algebraic multiplicity 3)
+$2$
 \end{solution}
 
 \begin{problem}{G2}
-Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 9 & -3 & 2 \\ 23 & -8 & 5 \\  -1 & 0 & 0 \end{bmatrix}$.
+Compute the determinant of the matrix $\begin{bmatrix} 8 & 5 & 3 & 0 \\ 3 & 2 & 1 & 1 \\ 5 & -3 & 1 & -2 \\ -1 & 2 & 0 & 1\end{bmatrix} $.
 \end{problem}
 \begin{solution}
-1 (with algebraic multiplicy 2), and -1 (with algebraic multiplicity 1).
+$-1$.
 \end{solution}
 
 \begin{problem}{G2}
-Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 9 & -3 & 2 \\ 23 & -8 & 5 \\  2 & -1 & 1 \end{bmatrix}$.
+Compute the determinant of the matrix
+\[
+  \begin{bmatrix}
+    1 & 3 & 2 & 4 \\
+    5 & 0 & -4 & 0 \\
+    -2 & 3 & -1 & 1 \\
+    0 & 1 & 0 & 1
+  \end{bmatrix}
+.\]
 \end{problem}
 \begin{solution}
-The eigenvalues are $-1$, $1$, and $2$ (each with algebraic multiplicity 1).
+\(15\).
 \end{solution}
 
 \begin{problem}{G2}
-Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 8 & -3 & 2 \\ 15 & -5 & 5 \\ -3 & 2 & 1 \end{bmatrix}$.
+Compute the determinant of the matrix
+\[
+  \begin{bmatrix}
+    1 & 3 & 2 & 4 \\
+    -2 & 3 & -1 & 1 \\
+    5 & 0 & -4 & 0 \\
+    0 & 1 & 0 & 1
+  \end{bmatrix}
+.\]
 \end{problem}
 \begin{solution}
-The eigenvalues are $0$ (with algebraic multiplicity 1),
-and $2$ (with algebraic multiplicity 2).
+\(-15\).
 \end{solution}
 
 \begin{problem}{G2}
-Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 8 & -3 & 2 \\ 23 & -9 & 5 \\ -7 & 2 & -3 \end{bmatrix}$.
+Compute the determinant of the matrix
+\[
+  \begin{bmatrix}
+    0 & -4 & 1 & 1 \\
+    0 & 1 & 0 & 1 \\
+    -2 & 3 & -1 & 1 \\
+    5 & 0 & -4 & 0 \\
+  \end{bmatrix}
+.\]
 \end{problem}
 \begin{solution}
-The eigenvalues are $0$ (with algebraic multiplicity 1)
-and $-2$ (with algebraic multiplicity 2).
+\(55\).
 \end{solution}
 
 \begin{problem}{G2}
-Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix}2 & -3 & 2 \\ 8 & -9 & 5 \\ 8 & -7 & 3 \end{bmatrix}$.
+Compute the determinant of the matrix
+\[
+  \begin{bmatrix}
+    0 & -4 & 1 & 1 \\
+    -2 & 3 & -1 & 1 \\
+    0 & 1 & 0 & 1 \\
+    5 & 0 & -4 & 0 \\
+  \end{bmatrix}
+.\]
 \end{problem}
 \begin{solution}
-The eigenvalues are $0$ (with algebraic multiplicity 1)
-and $-2$ (with algebraic multiplicity 2).
+\(-55\).
 \end{solution}
