--- a/tex/modules/6-G/exercises/G3.tex
+++ b/tex/modules/6-G/exercises/G3.tex
@@ -1,96 +1,7 @@
 \begin{problem}{G3}
-Compute the eigenspace of the eigenvalue $-1$ in the matrix $\begin{bmatrix} 4 & -2 & -1 \\ 15 & -7 & -3 \\ -5 & 2 & 0 \end{bmatrix}$. 
+Find the eigenvalues of the matrix \(\begin{bmatrix} 5 & 1 \\ -24 & -6\end{bmatrix}\).
 \end{problem}
 \begin{solution}
-$$\RREF\left(A+I\right) = \begin{bmatrix} 1 & - \frac{2}{5} & -\frac{1}{5} \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix}$$
-So the eigenspace is spanned by $\begin{bmatrix} 2 \\5 \\  0 \end{bmatrix}$ and $\begin{bmatrix} 1 \\ 0 \\ 5 \end{bmatrix}$.
+The eigenvalues are \(-3\) and \(2\).
 \end{solution}
 
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $1$ in the matrix $A=\begin{bmatrix} -3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \end{bmatrix}$
-\end{problem}
-\begin{solution}
-The eigenspace is spanned by $\begin{bmatrix} -\frac{1}{4} \\ -1 \\ 1 \end{bmatrix}$.
-\end{solution}
-
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $1$ in the matrix $A=\begin{bmatrix} 8 & -3 & -1 \\ 21 & -8 & -3 \\ -7 & 3  & 2 \end{bmatrix}$
-\end{problem}
-\begin{solution}
-The eigenspace is spanned by $\begin{bmatrix} \frac{3}{7} \\ 1 \\ 0 \end{bmatrix}$ and $\begin{bmatrix}\frac{1}{7} \\ 0 \\ 1 \end{bmatrix}$.
-\end{solution}
-
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $-1$ in the matrix $A=\begin{bmatrix}9 & -3 & 2 \\ 19 & -6 & 5 \\ -11 & 4 & -2 \end{bmatrix}$
-\end{problem}
-\begin{solution}
-The eigenspace is spanned by $\begin{bmatrix} -\frac{5}{7} \\ - \frac{12}{7} \\ 1 \end{bmatrix}$.
-\end{solution}
-
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $1$ in the matrix $A=\begin{bmatrix}9 & -3 & 2 \\ 19 & -6 & 5 \\ -11 & 4 & -2 \end{bmatrix}$
-\end{problem}
-\begin{solution}
-The eigenspace is spanned by $\begin{bmatrix} -1 \\ -2 \\ 1 \end{bmatrix}$.
-\end{solution}
-
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $2$ in the matrix $A=\begin{bmatrix} 0 & 1 & 0 & 0 \\ -4 & 4 & 0 & 0 \\ 11 & -6 & 1 & -1 \\ -9 & 5 & 1 & 3 \end{bmatrix}$.
-\end{problem}
-\begin{solution}
-The eigenspace is spanned by $\begin{bmatrix} -1 \\ -2 \\ 1 \\ 0 \end{bmatrix}$ and $\begin{bmatrix} -1 \\ -2 \\ 0 \\ 1 \end{bmatrix}$.
-\end{solution}
-
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $2$ in the matrix $A=\begin{bmatrix} 2 & 0 & 0 & 0 \\ 0 & 2 & 0 & 0 \\ -1 & 0 & 1 & -1 \\ 1 & 0 & 1 & 3 \end{bmatrix}$.
-\end{problem}
-\begin{solution}
-The eigenspace is spanned by $\begin{bmatrix} -1 \\ 0 \\ 1 \\ 0 \end{bmatrix}$, $\begin{bmatrix} -1 \\ 0 \\ 0 \\ 1 \end{bmatrix}$ and $\begin{bmatrix} 0 \\ 1 \\ 0 \\ 0 \end{bmatrix}$.
-\end{solution}
-
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $2$ in the matrix $A=\begin{bmatrix}0 & -2 & -1 & 0 \\ -4 & -2 & -2 & 0 \\ 14 & 12 & 10 & 2 \\ -13 & -10 & -8 & -1 \end{bmatrix}$.
-\end{problem}
-\begin{solution}
-The eigenspace is spanned by $\begin{bmatrix} -1 \\ \frac{1}{2} \\ 1 \\ 0 \end{bmatrix}$ and  $\begin{bmatrix} -1 \\ 1 \\ 0 \\ 1 \end{bmatrix}$.
-\end{solution}
-
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $3$ in the matrix $A=\begin{bmatrix}1 & -2 & -1 & 0 \\ -4 & -1 & -2 & 0 \\ 14 & 12 & 11 & 2 \\ -14 & -10 & -9 & -1\end{bmatrix}$.
-\end{problem}
-\begin{solution}
-The eigenspace is spanned by $\begin{bmatrix} -1 \\ \frac{1}{2} \\ 1 \\ 0 \end{bmatrix}$ and  $\begin{bmatrix} -1 \\ 1 \\ 0 \\ 1 \end{bmatrix}$.
-\end{solution}
-
-
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $2$ in the matrix $A=\begin{bmatrix}8 & -3 & 2 \\ 15 & -5 & 5 \\ -3 & 2 & 1\end{bmatrix}$
-\end{problem}
-\begin{solution}
-The eigenspace is spanned by $\begin{bmatrix} -\frac{1}{3} \\ 0 \\ 1 \end{bmatrix}$.
-\end{solution}
-
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $-2$ in the matrix $A=\begin{bmatrix}8 & -3 & 2 \\ 23 & -9 & 5 \\ -7 & 2 & -3\end{bmatrix}$
-\end{problem}
-\begin{solution}
-The eigenspace is spanned by $\begin{bmatrix} 1 \\ 4 \\ 1 \end{bmatrix}$.
-\end{solution}
-
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $-2$ in the matrix $A=\begin{bmatrix}2 & -3 & 2 \\ 8 & -9 & 5 \\ 8 & -7 & 3\end{bmatrix}$
-\end{problem}
-\begin{solution}
-The eigenspace is spanned by $\begin{bmatrix} \frac{1}{4} \\ 1 \\ 1 \end{bmatrix}$.
-\end{solution}
-
-
-\begin{problem}{G3}
-Find the eigenspace associated to the eigenvalue $2$ in the matrix $\begin{bmatrix} -1 & 1 & 0 \\ -9 & 5 & 0 \\ 15 & -5 & 2 \end{bmatrix}$.
-\end{problem}
-
-\begin{solution}
-The eigenspace is the solution space of the system $(B-2I)X=0$.
-$$\RREF(B-2I)=\RREF\left(\begin{bmatrix} -3 & 1 & 0 \\ -9 & 3 & 0 \\ 15 & - 5 & 0 \end{bmatrix} \right) = \begin{bmatrix} 1 & -\frac{1}{3} & 0 \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix}$$
-So the system simplifies to $x-\frac{y}{3}=0$, or $3x=y$.  Thus the eigenspace is $$E_2 = {\rm span}\left( \left\{ \begin{bmatrix} 1 \\ 3 \\ 0 \end{bmatrix}, \begin{bmatrix} 0 \\ 0 \\ 1\end{bmatrix} \right\} \right)$$
-\end{solution}
