--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -724,18 +724,17 @@ Consider the row operation \(R_2-4R_1\to R_2\) applied as follows to show
 \[
 A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
   \sim
-\begin{bmatrix}1&2&3\\4-4&5-8&6-12\\7&8&9\end{bmatrix}=B
+\begin{bmatrix}1&2&3\\4-4(1)&5-4(2)&6-4(3)\\7&8&9\end{bmatrix}=B
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
-\item Without computing either determinant,
-      simplify the value of \(\det(B)\) in terms of \(\det(A)\).
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 12\), how does applying this row operation to \(C\) change its determinant?
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}
 \item \(R= \begin{bmatrix} 1 & 0 & 0 \\ -4 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\)
-\item \(\det B =\det(RA)= \det(R)\det(A)=1\det A=\det A\)
+\item \(\det (RC) = \det(R) \det(C) = (1)(12)=12\).
 \end{enumerate}
 \end{solution}
 
@@ -752,28 +751,7 @@ Find the determinant of the matrix
   \end{bmatrix}
 \]
 \end{problem}
-\begin{solution}
-Here is one possible solution, using row and column operations to first reduce
-the determinant to a \(3\times 3\) matrix and then applying the diagonal
-formula taught in calculus courses:
-\begin{align*}
-\det
-  \begin{bmatrix}
-    1 & 3 & 0 & -1 \\
-    1 & 1 & 2 & 4 \\
-    1 & 1 & 1 & 3 \\
-    -3 & 1 & 2 & -5
-  \end{bmatrix}
-&=
-\det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 0 & 1 & 1 \\ 1 & 1 & 1 & 3 \\ -3 & 1 & 2 & -5 \end{bmatrix} =
-\det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 0 & 1 & 0 \\ 1 & 1 & 1 & 2 \\ -3 & 1 & 2 & -7 \end{bmatrix} \\ &=
--\det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 1 & 1 & 1 & 2 \\ 0 & 0 & 1 & 0 \\ -3 & 1 & 2 & -7 \end{bmatrix} =
--\det \begin{bmatrix} 1 & 3 & -1 \\ 1 & 1 & 2 \\ -3 & 1  & -7 \end{bmatrix} \\  &=
--((-7-18-1)-(3+2-21)) \\
- &=10
- \end{align*}
-
- And here is another possible solution, first applying a single row operation,
+\begin{solution}Here is another possible solution, first applying a single row operation,
  and then performing Laplace/cofactor expansions to reduce the determinant
  to a linear combination of \(2\times 2\) determinants:
 
@@ -793,6 +771,28 @@ formula taught in calculus courses:
  &= (-1) \left( -8+14-30 \right) + (1) \left(1-15 \right) \\
  &=10
  \end{align*}
+
+Here is another possible solution, using row and column operations to first reduce
+the determinant to a \(3\times 3\) matrix and then applying the diagonal
+formula taught in calculus courses:
+\begin{align*}
+\det
+  \begin{bmatrix}
+    1 & 3 & 0 & -1 \\
+    1 & 1 & 2 & 4 \\
+    1 & 1 & 1 & 3 \\
+    -3 & 1 & 2 & -5
+  \end{bmatrix}
+&=
+\det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 0 & 1 & 1 \\ 1 & 1 & 1 & 3 \\ -3 & 1 & 2 & -5 \end{bmatrix} =
+\det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 0 & 1 & 0 \\ 1 & 1 & 1 & 2 \\ -3 & 1 & 2 & -7 \end{bmatrix} \\ &=
+-\det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 1 & 1 & 1 & 2 \\ 0 & 0 & 1 & 0 \\ -3 & 1 & 2 & -7 \end{bmatrix} =
+-\det \begin{bmatrix} 1 & 3 & -1 \\ 1 & 1 & 2 \\ -3 & 1  & -7 \end{bmatrix} \\  &=
+-((-7-18-1)-(3+2-21)) \\
+ &=10
+ \end{align*}
+
+
 
 \end{solution}
 
