--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -734,7 +734,7 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 \begin{solution}
 \begin{enumerate}
 \item \(R= \begin{bmatrix} 1 & 0 & 0 \\ -4 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\)
-\item \(\det (RC) = \det(R) \det(C) = (1)(12)=12\).
+\item Elementary operations leave the determinant unchanged; algebraically, the resulting matrix \(RC\) has determinant given by \(\det (RC) = \det(R) \det(C) = (1)(12)=12\).
 \end{enumerate}
 \end{solution}
 
