--- a/tex/modules/5-M/sections/2.tex
+++ b/tex/modules/5-M/sections/2.tex
@@ -24,7 +24,7 @@ the products \(AB,AC,BA,BC,CA,CB\) can actually be computed.
 
 
 \begin{activity}{10}
-Let \(B=\begin{bmatrix}1 & 0  & 2 \\ 0 & 1 0 \\ 0 & 0 & 1 \end{bmatrix}\), and let \(A=\begin{bmatrix} 2 & 7 & -1 \\ 0 & 3 & 2 \\ 1 & 1 & -1 \end{bmatrix}\).  Compute the product \(BA\).
+Let \(B=\begin{bmatrix}1 & 0  & 2 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\), and let \(A=\begin{bmatrix} 2 & 7 & -1 \\ 0 & 3 & 2 \\ 1 & 1 & -1 \end{bmatrix}\).  Compute the product \(BA\).
 \end{activity}
 
 \begin{activity}{5}
