--- a/tex/modules/5-M/sections/3.tex
+++ b/tex/modules/5-M/sections/3.tex
@@ -2,12 +2,11 @@
 
 \begin{activity}{15}
 Let $T: \IR^n \rightarrow \IR^m$ be a linear map with standard matrix $A$.
-Sort the following items into groups of statements about $T$.
+Sort the following items into three groups of statements: a group that means
+\(T\) is \textbf{injective}, a group that means \(T\) is \textbf{surjective},
+and a group that means \(T\) is \textbf{bijective}.
 \begin{multicols}{2}
 \begin{enumerate}[(a)]
-\item $T$ is injective (i.e. one-to-one)
-\item $T$ is surjective (i.e. onto)
-\item $T$ is bijective (i.e. both injective and surjective)
 \item $AX=B$ has a solution for all $m \times 1$ matrices $B$
 \item $AX=B$ has a unique solution for all $m \times 1$ matrices $B$
 \item $AX=0$ has a unique solution.
@@ -56,7 +55,7 @@ Sort the following items into groups of statements about $T$.
 We could have solved these three systems simultaneously
 by row reducing the matrix \([A\,|\,I]\) at once.
 \[
-  A=\begin{bmatrix}[ccc|ccc]
+  \begin{bmatrix}[ccc|ccc]
     2 & -1 & -6 & 1 & 0 & 0 \\
     2 & 1 & 3 & 0 & 1 & 0 \\
     1 & 1 & 4 & 0 & 0 & 1
@@ -81,20 +80,21 @@ Is the matrix $\begin{bmatrix} 2 & 3 & 1 \\ -1 & -4 & 2 \\ 0 & -5 & 5 \end{bmatr
 \end{activity}
 
 \begin{observation}
- A matrix $A \in \IR^{n \times n}$ is invertible if and only if $\RREF(A) = I_n$.
+    An \(n\times n\) matrix $A$ is invertible if and only if $\RREF(A) = I_n$.
 \end{observation}
 
 \begin{activity}{10}
   Let \(T:\IR^2\to\IR^2\) be the bijective linear map defined by
-  \(T\left(\begin{bmatrix}x\\y\end{bmatrix}\right)=\begin{bmatrix} 2x -3y \\ -3x + 5y\end{bmatrix}\). It can be shown that \(T\) is bijective and
-  has the inverse map
+  \(T\left(\begin{bmatrix}x\\y\end{bmatrix}\right)=\begin{bmatrix} 2x -3y \\ -3x + 5y\end{bmatrix}\),
+  with the inverse map
   \(T^{-1}\left(\begin{bmatrix}x\\y\end{bmatrix}\right)=\begin{bmatrix} 5x+ 3y \\ 3x + 2y\end{bmatrix}\).
   \begin{subactivity}
     Compute \((T^{-1}\circ T)\left(\begin{bmatrix}-2\\1\end{bmatrix}\right)\).
   \end{subactivity}
   \begin{subactivity}
     If \(A\) is the standard matrix for \(T\) and \(A^{-1}\) is the
-    standard matrix for \(T^{-1}\), what must \(A^{-1}A\) be?
+    standard matrix for \(T^{-1}\), find the \(2\times 2\) matrix 
+    \[A^{-1}A=\begin{bmatrix}\unknown&\unknown\\\unknown&\unknown\end{bmatrix}.\]
   \end{subactivity}
 \end{activity}
 
