Fix trick question in M1

--- a/tex/modules/5-M/sections/1.tex
+++ b/tex/modules/5-M/sections/1.tex
@@ -122,7 +122,7 @@ Find the standard matrix \(BA\) of $T \circ S$.
 \end{activity}
 
 \begin{activity}{10}
-Let \(T: \IR^4 \rightarrow \IR^2\) be given by the matrix \(B=\begin{bmatrix} 3 & -1 \\ 2 & -3 \\ 5 & 1 \\ -4 & 2 \end{bmatrix} \) and let \(S: \IR^2 \rightarrow \IR^3\) be given by the matrix \(A = \begin{bmatrix} 3 & 1 & -1 \\ 2 & -4 & 2 \end{bmatrix}\).  Compute \(AB\), the standard matrix of the composition \(S \circ T\).
+Let \(T: \IR^4 \rightarrow \IR^2\) be given by the matrix \(B=\begin{bmatrix} 3 & -1 \\ 2 & -3 \\ 5 & 1 \\ -4 & 2 \end{bmatrix} \) and let \(S: \IR^2 \rightarrow \IR^3\) be given by the matrix \(A = \begin{bmatrix} 3 & 1 \\ -1 & 2 \\ -4 & 2 \end{bmatrix}\).  Compute \(AB\), the standard matrix of the composition \(S \circ T\).
 \end{activity}
 
 \begin{observation}
