Fix question marks in M2

--- a/tex/modules/5-M/sections/2.tex
+++ b/tex/modules/5-M/sections/2.tex
@@ -30,7 +30,7 @@ Let \(B=\begin{bmatrix}1 & 0  & 2 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\), and
 \begin{activity}{5}
 Let $A=\begin{bmatrix} 2 & 7 & -1 \\ 0 & 3 & 2 \\ 1 & 1 & -1 \end{bmatrix}$.  Find a $3 \times 3$ matrix $I$ such that $IA=A$, that is,
 \[
-  \begin{bmatrix} ? & ? & ? \\ ? & ? & ? \\ ? & ? & ? \end{bmatrix}
+  \begin{bmatrix} \unknown & \unknown & \unknown \\ \unknown & \unknown & \unknown \\ \unknown & \unknown & \unknown \end{bmatrix}
   \begin{bmatrix} 2 & 7 & -1 \\ 0 & 3 & 2 \\ 1 & 1 & -1 \end{bmatrix}
 =
   \begin{bmatrix} 2 & 7 & -1 \\ 0 & 3 & 2 \\ 1 & 1 & -1 \end{bmatrix}
@@ -62,7 +62,7 @@ Each row operation can be interpreted as a type of matrix multiplication.
 Tweak the identity matrix slightly to create a matrix that
 doubles the third row of $A$:
 \[
- \begin{bmatrix} ? & ? & ? \\ ? & ? & ? \\ ? & ? & ? \end{bmatrix}
+ \begin{bmatrix} \unknown & \unknown & \unknown \\ \unknown & \unknown & \unknown \\ \unknown & \unknown & \unknown \end{bmatrix}
  \begin{bmatrix} 2 & 7 & -1 \\ 0 & 3 & 2 \\ 1 & 1 & -1 \end{bmatrix}
 =
  \begin{bmatrix} 2 & 7 & -1 \\ 0 & 3 & 2 \\ 2 & 2 & -2 \end{bmatrix}
@@ -71,7 +71,7 @@ doubles the third row of $A$:
 \begin{subactivity}
   Create a matrix that swaps the second and third rows of $A$:
   \[
-   \begin{bmatrix} ? & ? & ? \\ ? & ? & ? \\ ? & ? & ? \end{bmatrix}
+   \begin{bmatrix} \unknown & \unknown & \unknown \\ \unknown & \unknown & \unknown \\ \unknown & \unknown & \unknown \end{bmatrix}
    \begin{bmatrix} 2 & 7 & -1 \\ 0 & 3 & 2 \\ 1 & 1 & -1 \end{bmatrix}
   =
   \begin{bmatrix} 2 & 7 & -1 \\ 1 & 1 & -1 \\ 0 & 3 & 2 \end{bmatrix}
@@ -80,7 +80,7 @@ doubles the third row of $A$:
 \begin{subactivity}
 Create a matrix that adds $5$ times the third row of $A$ to the first row:
 \[
- \begin{bmatrix} ? & ? & ? \\ ? & ? & ? \\ ? & ? & ? \end{bmatrix}
+ \begin{bmatrix} \unknown & \unknown & \unknown \\ \unknown & \unknown & \unknown \\ \unknown & \unknown & \unknown \end{bmatrix}
  \begin{bmatrix} 2 & 7 & -1 \\ 0 & 3 & 2 \\ 1 & 1 & -1 \end{bmatrix}
 =
  \begin{bmatrix} 2+5(1) & 7+5(1) & -1+5(-1) \\ 0 & 3 & 2 \\ 1 & 1 & -1 \end{bmatrix}
