Tweak facilitator notes

--- a/tex/facilitator-notes.tex
+++ b/tex/facilitator-notes.tex
@@ -12,7 +12,7 @@
 
 These notes are for a one semester, 3-hour sophomore-level Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Each team should be provided with a vertical, ideally non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a large regional public university in classes with 10-35 students, with each ``part'' designed to fill one 50-60 minute class period.  The notes (formatted as slides) are also distributed to the students for use during class and for review purposes; thus, there are ``facts'', ``definitions'', and ``observations'' sprinkled in for reference use, but the bulk of class time is spent on the application activities.  Each application activity has an estimated time listed with it; these add up to 50-60 minutes per day.
 
-The course consists of 6 modules, listed below; here they are optimized for 28 75-minute class days with 60 minutes each day devoted to application activity, and the remaining 15 minutes for assessment. 
+The course consists of 6 modules, listed below; here they are optimized for 27 75-minute class days with 60 minutes each day devoted to application activity, and the remaining 15 minutes for assessment. 
 
 \subsubsection*{Module Listing}
 \begin{enumerate}
@@ -177,7 +177,7 @@ This section develops matrix multiplication as the standard matrix corresponding
 Activity 2.2 ideally belongs with part 1, but there is rarely time for it.  The bulk of this part is devoted to students' discovering that row operations can be viewed as matrix multiplication.  This will be crucial in Module G in developing geometric intuition for the determinant.
 
 \subsubsection*{Part 3}
-This part is devoted to the notion of invertibility.  Activity 3.1 is a callback to Activity A.4.6 and A.4.12.   After the definition of invertibility, Activity 3.3. shows students that they already know how to compute the standard matrix of the inverse map.  
+This part is devoted to the notion of invertibility.  Activity 3.1 is a callback to Activity A.4.6 and A.4.12.   After the definition of invertibility, Activity 3.3 shows students that they already know how to compute the standard matrix of the inverse map.  
 
 \subsection*{Module 6-G: Geometric properties of linear maps}
 
