A few more G3 problems

--- a/tex/modules/6-G/exercises/G3.tex
+++ b/tex/modules/6-G/exercises/G3.tex
@@ -9,7 +9,7 @@ Its characteristic polynomial is \(\lambda^2+\lambda-6=(\lambda+3)(\lambda-2)\),
 Find the eigenvalues of the matrix \(\begin{bmatrix} -2 & 1 \\ 3 & -4\end{bmatrix}\).
 \end{problem}
 \begin{solution}
-Its characteristic polynomial is \(\lambda^2+6\lambda-5=(\lambda+1)(\lambda+5)\), yielding the eigenvalues \(-1\) and \(-5\).
+Its characteristic polynomial is \(\lambda^2+6\lambda+5=(\lambda+1)(\lambda+5)\), yielding the eigenvalues \(-1\) and \(-5\).
 \end{solution}
 
 \begin{problem}{G3}
@@ -53,3 +53,26 @@ Find the eigenvalues of the matrix \(\begin{bmatrix} 1 & -5 \\ 4 & -8\end{bmatri
 \begin{solution}
 Its characteristic polynomial is \(\lambda^2+7\lambda+12=(\lambda+3)(\lambda+4)\), yielding the eigenvalues \(-3\) and \(-4\).
 \end{solution}
+
+\begin{problem}{G3}
+Find the eigenvalues of the matrix \(\begin{bmatrix} -2 & 2 \\ 15 & -9\end{bmatrix}\).
+\end{problem}
+\begin{solution}
+Its characteristic polynomial is \(\lambda^2+11\lambda-12=(\lambda+12)(\lambda-1)\), yielding the eigenvalues \(-12\) and \(1\).
+\end{solution}
+
+
+\begin{problem}{G3}
+Find the eigenvalues of the matrix \(\begin{bmatrix} 10 & 2 \\ -39 & -9\end{bmatrix}\).
+\end{problem}
+\begin{solution}
+Its characteristic polynomial is \(\lambda^2-\lambda-12=(\lambda-4)(\lambda+3)\), yielding the eigenvalues \(-3\) and \(4\).
+\end{solution}
+
+\begin{problem}{G3}
+Find the eigenvalues of the matrix \(\begin{bmatrix} 8 & 2 \\ -33 & -9\end{bmatrix}\).
+\end{problem}
+\begin{solution}
+Its characteristic polynomial is \(\lambda^2+\lambda-6=(\lambda-2)(\lambda+3)\), yielding the eigenvalues \(-3\) and \(2\).
+\end{solution}
+
