Update Module G RAT

--- a/tex/modules/6-G/readiness/test.tex
+++ b/tex/modules/6-G/readiness/test.tex
@@ -72,11 +72,11 @@
 \end{multicols}
 
 %A
-\item Let $T: \IR^2 \rightarrow \IR$ be a linear transformation.  Which of the following is equal to $2T\left(\begin{bmatrix} a+b \\ a+b \end{bmatrix}\right)$?
+\item Let $T: \IR^2 \rightarrow \IR$ be a linear transformation.  Which of the following is equal to $T\left(\begin{bmatrix} a+b \\ a+b \end{bmatrix}\right)$?
 \begin{multicols}{2}
 \begin{readinessAssuranceTestChoices}
-\item $T\left(\begin{bmatrix} a \\ a \end{bmatrix}\right)+T\left(\begin{bmatrix}a \\ b \end{bmatrix} \right)+T\left(\begin{bmatrix}b \\ a \end{bmatrix}\right)+T\left(\begin{bmatrix}b \\ b \end{bmatrix} \right)$ %Correct
-\item $T\left(\begin{bmatrix}a \\ b \end{bmatrix} \right)+T\left(\begin{bmatrix}b \\ a \end{bmatrix} \right)$
+\item $T\left(\begin{bmatrix}a \\ b \end{bmatrix} \right)+T\left(\begin{bmatrix}b \\ a \end{bmatrix} \right)$%Correct
+\item $T\left(\begin{bmatrix} a \\ a \end{bmatrix}\right)+T\left(\begin{bmatrix}a \\ b \end{bmatrix} \right)+T\left(\begin{bmatrix}b \\ a \end{bmatrix}\right)+T\left(\begin{bmatrix}b \\ b \end{bmatrix} \right)$ 
 \item $T\left(\begin{bmatrix}a \\ b \end{bmatrix} \right)$
 \item $2T\left(\begin{bmatrix}a \\ b \end{bmatrix} \right)$
 \end{readinessAssuranceTestChoices}
@@ -104,8 +104,7 @@
 \end{multicols}
 
 %B
-\item How many distinct real roots does the polynomial $x^4+3x^3+x^2-3x-2$ have?
-(Hint: all the roots are rational.)
+\item What is the largest root of the polynomial $x^2+x-12$?
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
 \item $4$
